syntax = "proto3";

package proto;

import "stalk_proto/google/api/annotations.proto";
import "stalk_proto/models.proto";

option go_package = "github.com/peake100/stalkforecaster-go/stalkproto";


// The forecasting service definition.
service StalkForecaster {
  // Returns a turnip price forecast for supplied price ticker.
  rpc ForecastPrices (Ticker) returns (Forecast) {
    option (google.api.http) = {
      post: "/api/forecast"
      body: "*"
    };
  }
}
